--- a/codingtest_java/mobilefactory_lotto/src/main/resources/application.properties
+++ b/codingtest_java/mobilefactory_lotto/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.datasource.password=adminuser
 
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+
+#?? ???
+coolsms.apikey =NCSMXM643TDPUCCQ
+coolsms.apisecret =V4SHIEVQ2Z8EEOYOUJGBTODJ36XFZNBW
+coolsms.fromnumber =01022360381
